tabs to spaces, inline css

--- a/index.html
+++ b/index.html
@@ -4,32 +4,99 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A community for technologists living in Baton Rouge, LA.">
-    <meta name="author" content="Dylan Staley">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A community for technologists living in Baton Rouge, LA.">
+  <meta name="author" content="Dylan Staley">
 
-    <title>Baton Rouge Slack</title>
+  <title>Baton Rouge Slack</title>
 
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+  <style>
+    body {
+      margin-top: 50px;
+      margin-bottom: 50px;
+      background: none;
+      color: white;
+      font-family: 'helvetica neue', helvetica, arial, sans-serif;
+    }
+
+    .full {
+      background: url(/img/background_1920.jpg) no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+
+    .content {
+      margin: 0 auto;
+      margin-top: 90px;
+      padding: 0 10px;
+      max-width: 640px;
+      text-align: center;
+    }
+
+    a {
+      text-decoration: none;
+      color: #4285f4;
+    }
+
+    .subhead {
+      margin-bottom: 35px;
+    }
+
+    .typeform-share.link {
+      background-color: #4285f4;
+      border-radius: 2px;
+      padding: .9em 1em;
+      margin-top: 15px;
+      text-transform: uppercase;
+      color: white;
+      transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
+    }
+
+    .typeform-share.link:hover {
+      text-decoration: none;
+      box-shadow: 0 6px 10px rgba(0,0,0,.23),0 10px 30px rgba(0,0,0,.19);
+    }
+
+    footer {
+      bottom: 0;
+      position: fixed;
+      right: 0;
+      left: 0;
+      z-index: 1030;
+      margin-bottom: 10px;
+      margin-left: 10px;
+    }
+
+    @media (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), (min--moz-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) { 
+      .full {
+      background: url(/img/background_1440@2x.jpg) no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      }
+    }
+  </style>
 
 </head>
 
 <body>
 
-    <div class="content">
-        <h1>Baton Rouge Slack</h1>
-        <p class="subhead">A community for people who are passionate about technology and happen to live in Baton Rouge, LA (and the surrounding areas).</p>
-        <div><a class="typeform-share link" href="https://dylanstaley.typeform.com/to/JqEZ5j" data-mode="1" target="_blank">Request Invite</a></div>
-    </div>
+  <div class="content">
+    <h1>Baton Rouge Slack</h1>
+    <p class="subhead">A community for people who are passionate about technology and happen to live in Baton Rouge, LA (and the surrounding areas).</p>
+    <div><a class="typeform-share link" href="https://dylanstaley.typeform.com/to/JqEZ5j" data-mode="1" target="_blank">Request Invite</a></div>
+  </div>
 
-    <footer>Photo by <a href="https://www.flickr.com/photos/33630741@N07/11941978643">Antrell Williams</a></footer>
+  <footer>Photo by <a href="https://www.flickr.com/photos/33630741@N07/11941978643">Antrell Williams</a></footer>
 
-    <script>
-        (function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})();
-    </script>
+  <script>
+    (function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})();
+  </script>
 
 </body>
 
