--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       color: white;
       font-family: 'helvetica neue', helvetica, arial, sans-serif;
       display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
       -webkit-align-items: center;
+      -ms-flex-align: center;
       align-items: center;
       -webkit-justify-content: center;
+      -ms-flex-pack: justify;
       justify-content: center;
     }
 
