--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A community for technologists living in Baton Rouge, LA.">
+  <meta name="description" content="A community for Baton Rouge area developers, designers, marketers, business people, hobbyists, students, and other professionals involved in technology.">
   <meta name="author" content="Dylan Staley">
 
   <title>Baton Rouge Slack</title>
 
   <style>
-    html {
+    html, body {
       height: 100%;
-    }
-    body {
       margin: 0;
-      min-height: 100%;
+    }
+
+    body {
       background: none;
       color: white;
       font-family: 'helvetica neue', helvetica, arial, sans-serif;
-      display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-flex;
       display: flex;
-      -webkit-align-items: center;
+      
       -ms-flex-align: center;
+      -webkit-align-items: center;
       align-items: center;
+      
+      -ms-flex-pack: center;
       -webkit-justify-content: center;
-      -ms-flex-pack: justify;
       justify-content: center;
     }
 
@@ -83,7 +85,7 @@
 
   <div class="content">
     <h1>Baton Rouge Slack</h1>
-    <p class="subhead">A community for people who are passionate about technology and happen to live in Baton Rouge, LA (and the surrounding areas).</p>
+    <p class="subhead">A community for Baton Rouge area developers, designers, marketers, business people, hobbyists, students, and other professionals involved in technology.</p>
     <a class="typeform-share link" href="https://dylanstaley.typeform.com/to/JqEZ5j" data-mode="1" target="_blank">Request Invite</a>
   </div>
 
