--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
       text-align: center;
     }
 
+    h1, .subhead {
+      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    }
+
+    h1 {
+      font-size: 3em;
+    }
+
+    .subhead {
+      font-size: 22px;
+    }
+
     a {
       text-decoration: none;
       color: #4285f4;
