Smaller fonts for mobile devices

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     }
 
     h1 {
-      font-size: 3em;
+      font-size: 2em;
     }
 
     .subhead {
-      font-size: 22px;
+      font-size: 18px;
     }
 
     a {
@@ -92,6 +92,16 @@
       .full {
         background: url(/img/background_1440@2x.jpg) no-repeat center center fixed;
         background-size: cover;
+      }
+    }
+
+    @media (min-width: 385px) {
+      h1 {
+        font-size: 3em;
+      }
+
+      .subhead {
+        font-size: 22px;
       }
     }
   </style>
